examples/test/testpolicy8057.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8057
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key7: value7
      key44: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value35
      podSelector:
        matchLabels:
          key28: value34
          key4: value25
          key17: value27
